service/tests/requests/snapshots/categories/cannot_create_category_when_description_is_too_long@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"description\":\"Description must be under 1000 characters\"}}",
)
