service/tests/requests/snapshots/categories/cannot_create_category_when_name_already_exists@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    409,
    "{\"error\":\"Category t-shirts already exists!\",\"code\":\"entity_already_exists\"}",
)
