service/tests/requests/snapshots/categories/cannot_create_category_without_permission@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"You do not have permission to perform this action.\",\"code\":\"forbidden\"}",
)
