service/tests/requests/snapshots/categories/cannot_delete_category_when_category_contains_products@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    409,
    "{\"error\":\"Categories with products cannot be deleted\",\"code\":\"category_has_products\"}",
)
