service/tests/requests/snapshots/categories/cannot_get_category_when_pid_does_not_exist@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
