service/tests/requests/snapshots/categories/cannot_get_category_when_pid_is_invalid@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"The supplied resource identifier is invalid.\",\"code\":\"invalid_path_parameter\",\"field\":\"pid\"}",
)
