service/tests/requests/snapshots/categories/cannot_list_categories_with_invalid_parent_id@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"parent_id\":\"Parent ID must be a positive integer\"}}",
)
