service/tests/requests/snapshots/categories/cannot_update_category_when_image_link_is_invalid@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"{\\\"image_link\\\":\\\"Field error\\\"}\"}",
)
